<resources>
    <string name="app_name">Restaurant Menu</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="tap_to_retry">Tap to retry</string>
    <string name="price_dollars">$%1$d</string>
    <string name="add">Add</string>
    <string name="choose_quantity">Choose quantity</string>
    <string name="add_to_cart_success">Added %1$d %2$s to cart.</string>
    <string name="undo">Undo</string>
    <string name="error_message">An error has occurred, please try again.</string>
    <string name="retry">Retry</string>
    <string name="cart">Cart</string>
    <string name="menu">Menu</string>
    <string name="order">Order</string>
    <string name="pending">Pending</string>
    <string name="quantity_placeholder">x%1$d</string>
    <string name="pay">Pay</string>
    <string name="menu_category_placeholder">Menu - %1$s</string>
    <string name="confirm">Confirm</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="confirm_order_message">The order will be sent to the kitchen and cannot be canceled afterwards.</string>
    <string name="price_dollars_total">$%1$d total</string>
    <string name="confirm_payment_message">Call the waiter before paying for the order.</string>
    <string name="confirm_payment_title">Pay for order</string>
    <string name="pending_empty">Your cart is empty. Order some food from the Menu.</string>
    <string name="ordered_empty">Currently you have no ordered items.</string>
    <string name="table_name">Table name</string>
    <string name="waiter_password">Waiter password</string>
    <string name="reset_device">Reset device</string>
    <string name="configure">Configure</string>
    <string name="reset">Reset</string>
    <string name="settings">Settings</string>
    <string name="split_pay">Split Pay?</string>
    <string name="customers">Customers</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="camera_permission_rationale">The app needs camera permission in order to scan for QR codes.</string>
    <string name="qr_code_instructions">Position your QR code inside the camera\'s frame</string>
    <string name="add_customer_success">Added %1$s successfully!</string>
    <string name="enter_waiter_password">Enter waiter password</string>
    <string name="waiter_password_incorrect">Incorrect waiter password</string>
    <string name="call_the_waiter_to_proceed">Call the waiter to proceed.</string>
    <string name="password_required">Password required</string>
    <string name="total">Total:</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="order_summary">Order summary</string>
    <string name="thank_you_for_order">Thank you for your order!</string>
    <string name="everybody">Everybody</string>
    <string name="error_some_products_not_assign">Please assign a customer to each item.</string>
    <string name="error_customers_empty">Please add customers by scanning your given QR codes.</string>
    <string name="payment_method">Pay:</string>
    <string name="order_processed_successfully">Order has been processed successfully!</string>
    <string name="pending_orders_processed_successfully">Pending orders have been processed successfully!</string>
</resources>
